# os-contest-2024-image

./: Dockerfile  Dockerfile.online  README.md
oscomp-dependencies-2023/: Cargo.toml
